@@ -1,5 +1,6 @@
 5/8/26:
 
+- Fix player selecting occupied cell as counting as their turn
 - Complete step 5
 - Add alert for tie game
 - Create init function to initialize game
